--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <psycho.euphoria.player.TimeBar
+    <psycho.euphoria.player.PlayerView
         android:id="@+id/time_bar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></psycho.euphoria.player.TimeBar>
-</LinearLayout>
+        android:layout_height="match_parent"></psycho.euphoria.player.PlayerView>
+</FrameLayout>
