--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent">
 
     <psycho.euphoria.player.PlayerView
-        android:id="@+id/time_bar"
+        android:id="@+id/player_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"></psycho.euphoria.player.PlayerView>
 </FrameLayout>
